# BaseballEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INFRA_ROADMAP.md  Makefile  PHYSICS_ROADMAP.md  PLAYER_ARCHETYPES.md  README.md
.claude/: settings.json
app/: Makefile  analysis_runner.cpp  atbat_debug.cpp  ballpark_calibration.cpp  engine_tests.cpp  game_export.cpp  json_runner.cpp  json_tests.cpp  league_runner.cpp  main.cpp  pitch_scoring_check.cpp  season_runner.cpp  stats_runner.cpp  test_support.h  visual_main.cpp
config/: league.json  teams.json
docs/: jbl-team-ai-design.md
include/: AnimationPlanBuilder.h  AnimationTypes.h  AtBatEngine.h  AtBatTypes.h  BallPhysicsEngine.h  ContactEngine.h  ExportTypes.h  GameEngine.h  GameRules.h  GameState.h  JsonExporter.h  LeagueConfig.h  PitchEngine.h  PlayResolutionEngine.h  PlayResult.h  Player.h  Random.h  Roster.h  RosterManager.h  RunExpectancy.h  Stats.h  SwingDecisionEngine.h  SwingEngine.h  Team.h  Teams.h  ZoneJudge.h
src/: AnimationPlanBuilder.cpp  AtBatEngine.cpp  AtBatTypes.cpp  BallPhysicsEngine.cpp  ContactEngine.cpp  GameEngine.cpp  GameEngineBaseRunning.cpp  JsonExporter.cpp  PitchEngine.cpp  PlayResolutionEngine.cpp  Random.cpp  RunExpectancy.cpp  SwingDecisionEngine.cpp  SwingEngine.cpp  Teams.cpp  ZoneJudge.cpp
